--- a/src/neural_decoder/cffan_lm.ipynb
+++ b/src/neural_decoder/cffan_lm.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home3/ebrahim2/miniconda3/envs/speech-bci/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "import time\n",
@@ -24,6 +33,7 @@
     "import matplotlib.pyplot as plt\n",
     "from neural_decoder.dataset import getDatasetLoaders\n",
     "import neural_decoder.lm_utils as lmDecoderUtils\n",
+    "from neural_decoder.lm_utils import build_llama_1B\n",
     "from neural_decoder.model import GRUDecoder\n",
     "from neural_decoder.bit import BiT_Phoneme\n",
     "import pickle\n",
@@ -33,7 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL_CACHE_DIR = \"/data/willett_data/llama\"\n",
+    "llm, llm_tokenizer = lmDecoderUtils.build_opt(\n",
+    "cacheDir=MODEL_CACHE_DIR, device=\"auto\", load_in_8bit=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +89,17 @@
     "load_lm = True\n",
     "# LM decoding hyperparameters\n",
     "acoustic_scale = 0.8\n",
-    "blank_penalty = np.log(2)"
+    "blank_penalty = np.log(2)\n",
+    "\n",
+    "test_with_llm = True\n",
+    "\n",
+    "if test_with_llm:\n",
+    "    rescore_n_best = True\n",
+    "    rescore = True\n",
+    "    llm_weight = 0.5\n",
+    "else:\n",
+    "    rescore_n_best = False\n",
+    "    rescore = False"
    ]
   },
   {
@@ -315,8 +347,8 @@
     "                    ngramDecoder,\n",
     "                    logits[0],\n",
     "                    blankPenalty=blank_penalty,\n",
-    "                    returnNBest=False,\n",
-    "                    rescore=False,\n",
+    "                    returnNBest=rescore_n_best,\n",
+    "                    rescore=rescore,\n",
     "                )\n",
     "                \n",
     "                nbest_outputs.append(nbest)\n",
@@ -324,23 +356,58 @@
     "            time_per_sample = (time.time() - start_t) / len(model_outputs[\"logits\"])\n",
     "            print(f\"N-gram decoding took {time_per_sample} seconds per sample\")\n",
     "\n",
-    "            #for i in range(len(model_outputs[\"transcriptions\"])):\n",
-    "            #    new_trans = [ord(c) for c in model_outputs[\"transcriptions\"][i]] + [0]\n",
-    "            #    model_outputs[\"transcriptions\"][i] = np.array(new_trans)\n",
+    "            if test_with_llm:\n",
     "                \n",
-    "            for i in range(len(model_outputs[\"transcriptions\"])):\n",
-    "                model_outputs[\"transcriptions\"][i] = model_outputs[\"transcriptions\"][i].strip()\n",
-    "                nbest_outputs[i] = nbest_outputs[i].strip()\n",
-    "            \n",
-    "            # lower case + remove puncs\n",
-    "            for i in range(len(model_outputs[\"transcriptions\"])):\n",
-    "                model_outputs[\"transcriptions\"][i] = convert_sentence(model_outputs[\"transcriptions\"][i])\n",
+    "                for i in range(len(model_outputs[\"transcriptions\"])):\n",
+    "                    new_trans = [ord(c) for c in model_outputs[\"transcriptions\"][i]] + [0]\n",
+    "                    model_outputs[\"transcriptions\"][i] = np.array(new_trans)\n",
+    "                    \n",
+    "                # Rescore nbest outputs with LLM\n",
+    "                start_t = time.time()\n",
+    "                llm_out = lmDecoderUtils.cer_with_gpt2_decoder(\n",
+    "                    llm,\n",
+    "                    llm_tokenizer,\n",
+    "                    nbest_outputs[:],\n",
+    "                    acoustic_scale,\n",
+    "                    model_outputs,\n",
+    "                    outputType=\"speech_sil\",\n",
+    "                    returnCI=True,\n",
+    "                    lengthPenalty=0,\n",
+    "                    alpha=llm_weight,\n",
+    "                )\n",
+    "                # time_per_sample = (time.time() - start_t) / len(logits)\n",
+    "                print(f\"LLM decoding took {time_per_sample} seconds per sample\")\n",
     "\n",
-    "            cer, wer = _cer_and_wer(nbest_outputs, model_outputs[\"transcriptions\"], \n",
-    "                                outputType='speech', returnCI=True)\n",
+    "                #print(llm_out[\"cer\"], llm_out[\"wer\"])\n",
+    "                #with open(input_args.modelPath + \"/llm_out\", \"wb\") as handle:\n",
+    "                #    pickle.dump(llm_out, handle)\n",
     "\n",
-    "            print(\"CER and WER after 3-gram LM: \", cer, wer)            "
+    "                decodedTranscriptions = llm_out[\"decoded_transcripts\"]\n",
+    "                #with open(input_args.modelPath + \"/5gramLLMCompetitionSubmission.txt\", \"w\") as f:\n",
+    "                #    for x in range(len(decodedTranscriptions)):\n",
+    "                #        f.write(decodedTranscriptions[x] + \"\\n\")\n",
+    "            else:\n",
+    "                \n",
+    "                for i in range(len(model_outputs[\"transcriptions\"])):\n",
+    "                    model_outputs[\"transcriptions\"][i] = model_outputs[\"transcriptions\"][i].strip()\n",
+    "                    nbest_outputs[i] = nbest_outputs[i].strip()\n",
+    "                \n",
+    "                # lower case + remove puncs\n",
+    "                for i in range(len(model_outputs[\"transcriptions\"])):\n",
+    "                    model_outputs[\"transcriptions\"][i] = convert_sentence(model_outputs[\"transcriptions\"][i])\n",
+    "\n",
+    "                cer, wer = _cer_and_wer(nbest_outputs, model_outputs[\"transcriptions\"], \n",
+    "                                    outputType='speech', returnCI=True)\n",
+    "\n",
+    "                print(\"CER and WER after 3-gram LM: \", cer, wer)            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
